feat: Implement standardized API response structure and message codes
- Added MessageCode class for centralized message management.
- Introduced ApiResponse and PageResponse DTOs for consistent API responses.
- Created ExampleController with endpoints for paginated user retrieval and message code testing.
- Updated HomeController to use message codes and improved endpoint structure.
- Developed SearchController for advanced user search with filtering and sorting capabilities.
- Implemented GlobalExceptionHandler for standardized error responses using message codes.
- Added RequestLoggingFilter for logging requests and responses with correlation IDs.
- Created BaseEntity and SoftDeletableEntity for common entity attributes and soft delete functionality.
- Introduced SpecificationBuilder for dynamic query building based on search criteria.
- Updated application.yml for CORS configuration and Swagger UI settings.